#RUSTFLAGS="-C target-cpu=native -C target-feature=+crt-static" cargo build --release 
[package]
name = "iobench"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
memmap2 = "0.5"
page_size = "0.4"
libc = "0.2"
aligned_vec = {git="https://github.com/uv-rust/aligned_vec"}
par_seq = {git = "https://github.com/uv-rust/par_seq"}

[target.'cfg(target_os = "linux")'.dependencies]
iou = "*"

[features]
seq_read=[]
seq_read_all=[]
seq_read_direct_all=[]
seq_read_buf=[]
seq_read_buf_all=[]
seq_read_mmap=[]
seq_read_mmap_all=[]
seq_read_vec_all=[]
all_read=[
     "seq_read",
     "seq_read_all",
     "seq_read_direct_all",
     "seq_read_buf",
     "seq_read_buf_all",
     "seq_read_mmap",
     "seq_read_mmap_all",
     "seq_read_vec_all",
]
par_read_all = []
par_read_buf_all = []
par_read_direct_all = []
par_read_mmap_all = []
par_read_pread_all = []
par_read_vec_all = []
all_par_read = [
    "par_read_all",
    "par_read_buf_all",
    "par_read_direct_all",
    "par_read_mmap_all",
    "par_read_pread_all",
    "par_read_vec_all"
]


seq_write=[]
seq_write_all=[]
seq_write_direct_all=[]
seq_write_buf=[]
seq_write_buf_all=[]
seq_write_mmap=[]
seq_write_mmap_all=[]
seq_write_vec_all=[]
seq_write_uring_all=[]
seq_write_uring_vec_all=[]
all_write=[
     "seq_write",
     "seq_write_all",
     "seq_write_direct_all",
     "seq_write_buf",
     "seq_write_buf_all",
     "seq_write_mmap",
     "seq_write_mmap_all",
     "seq_write_vec_all",
]
par_write_all = []
par_write_buf_all = []
par_write_direct_all = []
par_write_mmap_all = []
par_write_pwrite_all = []
par_write_vec_all = []
all_par_write = [
    "par_write_all",
    "par_write_buf_all",
    "par_write_direct_all",
    "par_write_mmap_all",
    "par_write_pwrite_all",
    "par_write_vec_all"
]
uring_direct = []
default = []
all = ["all_read", "all_write", "all_par_read", "all_par_write"]
